# api-migracion-correos

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  ssh_integration.md
src/: auth.rs  main.rs  state.rs  storage.rs
src/entities/: email_config.rs  mod.rs  msg_mime.rs  msg_struct.rs  msg_teams.rs  user_migration.rs
src/mappers/: mod.rs  ticket_documents.rs
src/routes/: health.rs  mod.rs  mongo.rs  mysql.rs  ssh.rs  storage.rs  structs.rs  sync.rs
src/services/: mod.rs  mongo.rs  mysql.rs  tickets_batches.rs  tickets_files.rs  tickets_responses.rs  tickets_sync.rs  users_sync.rs
src/ssh/: client.rs  config.rs  mod.rs  service.rs
